iris/docs/v1.6/_sources/iris/iris/coord_systems.txt
.. _iris.coord_systems:

==================
iris.coord_systems
==================



.. currentmodule:: iris

.. automodule:: iris.coord_systems

In this module:

 * :py:obj:`CoordSystem`
 * :py:obj:`GeogCS`
 * :py:obj:`LambertConformal`
 * :py:obj:`OSGB`
 * :py:obj:`RotatedGeogCS`
 * :py:obj:`Stereographic`
 * :py:obj:`TransverseMercator`


----------

Abstract base class for coordinate systems.

..

    .. autoclass:: iris.coord_systems.CoordSystem
        :members:
        :undoc-members:

----------

A geographic (ellipsoidal) coordinate system, defined by the shape of
the Earth and a prime meridian.

..

    .. autoclass:: iris.coord_systems.GeogCS
        :members:
        :undoc-members:

----------

A coordinate system in the Lambert Conformal conic projection.

..

    .. autoclass:: iris.coord_systems.LambertConformal
        :members:
        :undoc-members:

----------

A Specific transverse mercator projection on a specific ellipsoid.

..

    .. autoclass:: iris.coord_systems.OSGB
        :members:
        :undoc-members:

----------

A coordinate system with rotated pole, on an optional :class:`GeogCS`.

..

    .. autoclass:: iris.coord_systems.RotatedGeogCS
        :members:
        :undoc-members:

----------

A stereographic map projection.

..

    .. autoclass:: iris.coord_systems.Stereographic
        :members:
        :undoc-members:

----------

A cylindrical map projection, with XY coordinates measured in metres.

..

    .. autoclass:: iris.coord_systems.TransverseMercator
        :members:
        :undoc-members:

